using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class FantasyCharacterController : MonoBehaviour
{
    const string ANIM_WALK = "walk", ANIM_RUN = "run", ANIM_ATTACK = "attack", ANIM_DAMAGE = "damage", ANIM_DEAD = "dead", ANIM_IDLE = "idle";
    // Start is called before the first frame update
    void Start()
    {
        
    }

    // Update is called once per frame
    void Update()
    {
        
    }
}
